--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "fedDan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
