--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.1.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "file-system": "^2.2.2",
     "multer": "^1.4.0",
     "node-sass": "^4.9.0",
     "sqlite3": "^4.0.2"
