--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
+    "connect-sqlite3": "^0.9.11",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "file-system": "^2.2.2",
     "multer": "^1.4.0",
     "node-sass": "^4.9.0",
