--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "fedDan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
     "connect-sqlite3": "^0.9.11",
